<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/deter"
    tools:context="com.example.jianingsun.mineseeker.HelpActivity">

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpOK"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Colored" />

    <TextView
        android:text="@string/direction_clicke_on_a_tile_if_there_is_a_determination_hidden_below_you_will_find_it_out_a_red_heart_otherwise_a_determination_scanner_invented_by_dr_alphys_will_help_you_scanning_the_row_and_the_column_of_this_tile_and_show_you_the_number_of_hidden_determination_use_this_number_as_a_guidance_to_find_other_determinations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textStyle="normal|bold"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_above="@+id/background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/in_the_story_of_undertale_only_human_has_the_determination_which_is_paramountly_powerful_to_save_the_world_so_dr_alphys_wanted_to_do_experiments_on_determinations_unfortunately_in_the_fight_with_flowey_she_lost_her_extracts_of_determinations_now_please_help_her_to_find_determination_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/all_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView21"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/welcome_screen_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:autoLink="web"
        android:clickable="true"
        android:textStyle="normal|bold"
        android:textColor="@color/colorAccent"
        android:layout_above="@+id/mainmenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/https_imgflip_com_memetemplate_60292945_annoying_dogundertale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:clickable="true"
        android:id="@+id/dog"
        android:textStyle="normal|bold"
        android:layout_above="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/https_commons_wikimedia_org_wiki_crystal_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:clickable="true"
        android:id="@+id/message"
        android:textStyle="normal|bold"
        android:layout_above="@+id/dog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/www_loadthegame_com_2015_10_09_undertale_review_humans_monsters_flowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:autoLink="web"
        android:clickable="true"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="normal|bold"
        android:layout_above="@+id/message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/https_pixabay_com_en_pixel_heart_rose_pink_love_355142"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:clickable="true"
        android:id="@+id/help"
        android:textStyle="normal|bold"
        android:layout_above="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/sound_effects_http_soundbible_com_free_sound_effects_1_html"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sound"
        android:autoLink="web"
        android:clickable="true"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/story_from_undertale_www_undertale_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:clickable="true"
        android:id="@+id/background"
        android:textStyle="normal|bold"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

    <TextView
        android:text="@string/main_menu_background_https_pixabay_com_en_heart_pixel_square_love_red_1847868"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:clickable="true"
        android:id="@+id/mainmenu"
        android:textStyle="normal|bold"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_above="@+id/sound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
